# DjangoComputerShop

./: .gitignore  123.py  afterreload.sh  docker-compose-dev.yaml  dockerfile  pyproject.toml
djangoShop/: manage.py
djangoShop/basket/: admin.py  apps.py  mixins.py  models.py  urls.py  utils.py  views.py
djangoShop/basket/migrations/: 0001_initial.py  0002_alter_basket_managers.py  0003_alter_basket_options.py
djangoShop/basket/templatetags/: baskets_tags.py
djangoShop/common/: mixins.py
djangoShop/djangoShop/: asgi.py  settings.py  urls.py  wsgi.py
djangoShop/fixtures/goods/: category.json  product.json
djangoShop/fixtures/users/: users.json
djangoShop/goods/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
djangoShop/goods/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_name_and_more.py  0003_alter_category_options.py
djangoShop/goods/templates/goods/: catalog.html  product.html
djangoShop/goods/templatetags/: goods_tags.py
djangoShop/main/: urls.py  views.py
djangoShop/main/templates/main/: about.html  base.html  index.html
djangoShop/orders/: admin.py  forms.py  models.py  urls.py  views.py
djangoShop/orders/migrations/: 0001_initial.py  0002_order_delivery_address_alter_order_requires_delivery.py  0003_alter_order_delivery_address.py  0004_alter_order_options_alter_orderitem_options.py
djangoShop/rabbitmq/: producer.py
djangoShop/rabbitmq/common/: __init__.py  base.py  exc.py  user_updates_rabbit.py
djangoShop/rabbitmq/config/: settings.py
djangoShop/templates/goods/: catalog.html  product.html
djangoShop/templates/includes/: basket_button.html  included_basket.html  notifications.html
djangoShop/templates/main/: about.html  base.html  index.html
djangoShop/templates/orders/: create_order.html
djangoShop/templates/users/: basket.html  login.html  profile.html  registration.html
djangoShop/tests/: conftest.py
djangoShop/tests/basket/: test_basket_add_view.py  test_basket_change_view.py  test_basket_remove_view.py
djangoShop/tests/goods/: test_catalog_view.py  test_product_view.py
djangoShop/tests/main/: test_about_view.py  test_home_view.py
djangoShop/tests/users/: test_login_view.py  test_logout_view.py  test_profile_view.py  test_registration_view.py
djangoShop/users/: admin.py  forms.py  models.py  urls.py  views.py
djangoShop/users/migrations/: 0001_initial.py  0002_user_phone_number.py
scripts/: afterreload.sh  dockerstart.sh  start.sh  stop.sh
