[tool.poetry]
name = "djangocomputershop"
version = "0.1.0"
description = ""
authors = ["Lev <lafitel31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django-debug-toolbar = "^4.4.6"
redis = "^5.1.1"
pika = "^1.3.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
ruff = "^0.7.0"
pytest-django = "^4.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.ruff]
target-version = "py312"
line-length = 120
select = [
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "E",   # pycodestyle
  "F",   # pyflakes
  "FBT", # flake8-boolean-trap
  "N",   # pep8-naming
  "Q",   # flake8-quotes
  "TID", # flake8-tidy-imports
  "W",   # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore complexity
  "C901",
]

unfixable = [
  # Don't touch unused imports
  "F401",
  # Don't touch unused variables
  "F841",
]

# Exclude a variety of commonly ignored directories
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".hg",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "**pypackages**",
  "_build",
  "build",
  "dist",
  "migrations",
  "node_modules",
  "static",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.isort]
known-first-party = ["{{ project_name }}"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["TID252"]
"tests.py" = ["TID252"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "djangoShop.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
